[package]
name = "aoc2018"
version = "0.1.0"
authors = ["scturtle <scturtle@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "*"
itertools = "*"
dotenv = "*"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"
